--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
+	"homepage": "https://locust13region.github.io/7winds/",
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
 		"@emotion/react": "^11.11.4",
@@ -27,6 +30,7 @@
 		"eslint": "^8.57.0",
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"eslint-plugin-react-refresh": "^0.4.7",
+		"gh-pages": "^6.1.1",
 		"typescript": "^5.4.5",
 		"vite": "^5.3.1"
 	}
